# romaji-phonem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
romajiphonem/: __init__.py  api.py
tests/: test_api.py
